# EFR32MG2X-RS

./: .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  docs-header.html
efr32mg24-hal/: Cargo.toml  README.md  build.rs  device.x  memory.x
efr32mg24-hal/docs/: AUDIT_REPORT.md  AUDIT_SUMMARY.md  BUILD_SYSTEM.md  INDUSTRY_AUDIT.md  LINKER_SETUP.md  PHASE2_PLAN.md  PHASE5_TIER3_PLAN.md  PHASE_A_IMPLEMENTATION_STATUS.md  PHASE_A_POST_IMPLEMENTATION_REVIEW.md  README.md  REMAINING_WORK.md  STATUS.md
efr32mg24-hal/examples/: 01_clock.rs  02_delay.rs  03_gpio.rs  04_usart.rs  05_i2c.rs  06_spi.rs  07_timer.rs  07_timer_pwm.rs  08_adc.rs  09_dma.rs  _01-04_checkpoint.rs
efr32mg24-hal/src/: lib.rs
efr32mg24-hal/src/adc/: README.md  mod.rs  traits.rs  types.rs
efr32mg24-hal/src/clock/: README.md  clocks.rs  frozen.rs  mod.rs  types.rs
efr32mg24-hal/src/delay/: README.md  mod.rs
efr32mg24-hal/src/dma/: README.md  mod.rs  types.rs
efr32mg24-hal/src/gpio/: README.md  mod.rs  pin.rs  traits.rs  types.rs
efr32mg24-hal/src/i2c/: README.md  mod.rs  traits.rs  types.rs
efr32mg24-hal/src/spi/: README.md  mod.rs  traits.rs  types.rs
efr32mg24-hal/src/timer/: README.md  mod.rs  traits.rs  types.rs
efr32mg24-hal/src/usart/: README.md  mod.rs  traits.rs  types.rs
efr32mg24-pac/: Cargo.toml  README.md  build.rs
efr32mg24-pac/src/: cmu_s.rs  device.x  devinfo.rs  dmem_ns.rs  gpio_ns.rs  lfrco_ns.rs  lib.rs  msc_s.rs  mvp_s.rs  prs_s.rs
efr32mg24-pac/src/acmp1_s/: inputctrl.rs
efr32mg24-pac/src/cmu_ns/: clken0.rs  vdac1clkctrl.rs
efr32mg24-pac/src/cmu_s/: clken1.rs
efr32mg24-pac/src/dcdc_ns/: ctrl.rs  ien.rs  status.rs
efr32mg24-pac/src/dcdc_s/: if_.rs
efr32mg24-pac/src/devinfo/: fenotchcal.rs  info.rs  part.rs  rtherm.rs  swcapa1.rs
efr32mg24-pac/src/dmem_ns/: cmd.rs  eccerraddr3.rs  eccmerrind.rs  if_.rs
efr32mg24-pac/src/dmem_s/: ctrl.rs  eccerraddr2.rs  ien.rs
efr32mg24-pac/src/emu_s/: ipversion.rs  status.rs
efr32mg24-pac/src/gpio_ns/: abusalloc.rs  cdbusalloc.rs  ipversion.rs  porta_din.rs  porta_modeh.rs  portb_dout.rs  portb_model.rs  prs0_asynch15route.rs  prs0_routeen.rs  rac_lnaenroute.rs  rac_routeen.rs
efr32mg24-pac/src/gpio_s/: bbusalloc.rs  porta_dout.rs  portb_din.rs  (+4 more)
efr32mg24-pac/src_backup_a020/: device.x
efr32mg24-pac/svd/: README.md
(+203 files in other folders)
