[workspace]
resolver = "2"
members = [
    "efr32mg24-pac",
    "efr32mg24-hal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitscrafts/EFR32MG2X-RS"
authors = ["Marcelo Correa <mvcorrea+github@gmail.com>"]

[workspace.dependencies]
# Common dependencies
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", default-features = false }
embedded-hal = "1.0.0"
critical-section = "1.2.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = true
