[package]
name = "efr32mg24-pac"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Peripheral Access Crate for EFR32MG24 microcontrollers"
keywords = ["arm", "cortex-m", "efr32", "silabs", "embedded"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
cortex-m = { workspace = true }
vcell = "0.1.3"
portable-atomic = { version = "1.10.0", default-features = false }

[dependencies.critical-section]
workspace = true
optional = true

[dependencies.cortex-m-rt]
workspace = true
optional = true

[features]
default = ["critical-section"]
rt = ["cortex-m-rt/device"]
critical-section = ["dep:critical-section"]

[build-dependencies]
